Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19343

lctl setquota -g quota_usr incorrectly showing "invalid project id" instead of "invalid group id".

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Trivial Trivial
    • Lustre 2.17.0
    • None
    • 3
    • 9223372036854775807

      lfs setquota -g quota_usr -b 0 -B 0 -i 0 -I 0 /mnt/lustre
      lt-lfs setquota: invalid project id 'quota_usr'
      setquota failed: Operation not permitted
      sanity-quota : @@@@@@ FAIL: clear quota for [type:-g name:quota_usr] failed 

      The lfs_setquota function where all quota types (user, group, and project) were using the same error handling path that always displayed "invalid project id" regardless of the actual quota type being processed.

      Should be fixed to shows the appropriate error message based on the quota type:

      • "invalid user id" for -u (user quota)
      • "invalid group id" for -g (group quota)
      • "invalid project id" for -p (project quota)

       

            ablagodarenko Artem Blagodarenko
            ablagodarenko Artem Blagodarenko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: