LU-19343 utls: appropriate error message based on the quota type

The lfs_setquota function where all quota types (user, group, and
project) were using the same error handling path that always
displayed "invalid project id" regardless of the actual quota type
being processed.

This is fixed to shows the appropriate error message based on the
quota type:

"invalid user id" for -u (user quota)
"invalid group id" for -g (group quota)
"invalid project id" for -p (project quota)

Test-Parameters: trivial
Signed-off-by: Artem Blagodarenko <ablagodarenko@ddn.com>
Change-Id: I4a24c01ca5d94f28cb439420ff8d81f391663ff4
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61220
Reviewed-by: Marc Vef <mvef@whamcloud.com>
Reviewed-by: Sergey Cheremencev <scherementsev@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>